--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body::-webkit-scrollbar {
 .section-second-container {
   width: 100%;
   /* background: linear-gradient(180deg, #FFFFFF 30.29%, #FFE6A1 100%); */
-  background-color: #fcfcfc;
+  background-color: #ffeacd;
   display: grid;
   grid-template-rows: auto 1fr;
   gap: 2rem;
@@ -218,7 +218,7 @@ body::-webkit-scrollbar {
 }
 
 .changes-maker-section-index {
-  padding: 1rem 0rem 0rem 0rem;
+  padding: 0rem 0rem 0rem 0rem;
   /* background: linear-gradient(180deg, #FFE6A1 30.29%, #FFFFFF 100%); */
   display: flex;
   flex-direction: column;
