--- a/css/orchid-school.css
+++ b/css/orchid-school.css
@@ -29,7 +29,7 @@
 .rallives-foundation-tab-box {
   width: 100%;
   /* height: 80vh; */
-  background-color: #458ae3;
+  background-color: #234168;
   display: flex;
   align-items: center;
   justify-content: center;
