--- a/css/orchid-school.css
+++ b/css/orchid-school.css
@@ -28,27 +28,39 @@
 
 .rallives-foundation-tab-box {
   width: 100%;
-  /* height: 80vh; */
-  background-color: #234168;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 2rem;
+  position: relative;
 }
+
+
 
 .inner-content-tab {
   width: 70%;
   height: 100%;
-  padding: 5rem 7rem;
-  gap: 3rem;
-  display: grid;
-  grid-template-rows: 30% auto 1fr;
+  /* padding: 5rem 7rem; */
+  padding-top: 0rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 3rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  /* display: grid;
+  grid-template-rows: 25% 18%; */
+  position: absolute;
 }
 
 .logo-foundation-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 100%;
+    height: 30%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 1rem;
 }
 
 .logo-foundation-box > img {
@@ -61,26 +73,29 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
+  padding: 0rem 10rem;
+} 
 
 .title-of-foundation {
-  font-weight: 500;
-  font-size: 32px;
-  color: #ffffff;
-  text-align: center;
+font-weight:500;
+font-size: 32px;
+color: #ffffff;
+text-align: center;
+ width: 100%;
+background: rgba(0, 0, 0, 0.6);
+padding: 1rem;
 }
 
-.foundation-description-text {
+ .foundation-description-text {
   font-weight: 400;
   font-size: 18px;
-  line-height: 25px;
+  line-height: 31px;
   text-align: justify;
-  color: #f2f2f2;
-}
+  color: #111111;
+} 
 
 .dashboard-content-box {
   width: 100%;
-  /* height: 100vh; */
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -113,7 +128,6 @@
   background-color: #f2f2f2;
   border-radius: 12px;
   display: grid;
-  /* grid-template-columns: 1fr 40%; */
   grid-template-rows:1fr;
   padding: 3rem 3rem;
   gap: 1rem;
@@ -163,13 +177,13 @@
 }
 
 .right-top-content-i {
-  padding: 10px;
+  padding: 2rem 1rem;
   box-shadow: 0px 0px 8px 0px #00000040;
   border-radius: 12px;
-  background-color: #feeacd;
+  background-color:#D8F7FB;
   display: grid;
-  grid-template-columns: 20% 1fr;
-  height: 28.6vh;
+  grid-template-rows: 20% 1fr;
+  gap: 1rem;
 }
 
 .right-bottom-content-i {
@@ -265,13 +279,14 @@
 }
 
 .image-student-changemaker > img {
-  height: 130px;
+  height: 60px;
 }
 
 .student-description-changemaker {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: column-reverse;
+  justify-content: end;
+  align-items: center;
   gap: 4px;
 }
 
@@ -285,6 +300,7 @@
   font-weight: 600;
   font-size: 17px;
   color: #000000;
+  text-align: center;
 }
 
 .national-education-image {
@@ -309,21 +325,19 @@
 }
 
 .workshop-still-btn {
-  padding: 0.7rem 1rem;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 25px;
   cursor: pointer;
   border: none;
   border-radius: 6px;
-  box-shadow: 0px 4px 4px 0px #00000040;
-  background-color: white;
+  background: transparent;
 }
 
 .workshop-still-container {
   width: 100vw;
   background-color: #fff4d5;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto 1fr;
   gap: 2rem;
   padding: 2rem;
 }
@@ -344,8 +358,9 @@
 
 .student-impact-container {
   width: 100vw;
-  height: 70vh;
+  height: 60vh;
   position: relative;
+  background: linear-gradient(360deg, #FFEACC 0%, #FFB959 100%);
 }
 
 .cards-student-impact {
@@ -354,14 +369,14 @@
   width: 100%;
   height: 100%;
   padding: 2rem;
-  display: grid;
-  grid-template-rows: auto 1fr;
+  display: flex;
+  flex-direction: column;
   gap: 1.6rem;
 }
 
 .student-impact-cards-container {
   padding: 10px;
-  padding: 0rem 10rem;
+  padding: 0rem 5rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
@@ -369,21 +384,23 @@
 
 .inner-data-impact {
   background-color: white;
-  border-radius: 6px;
+  border-radius:24px;
   box-shadow: 0px 0px 12px 0px #00000040;
-  display: grid;
-  grid-template-rows: 1fr 20%;
-  gap: 10px;
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+  padding: 1rem;
 }
 
 .inner-data-description {
   font-weight: 500;
-  font-size: 20px;
-  line-height: 33px;
+  font-size: 19px;
+  line-height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  border-bottom: 1px solid #DBDBDB;
+  padding-bottom: 11px;
 }
 
 .grade-student-detail {
@@ -392,13 +409,48 @@
   color: #000000;
   display: flex;
   align-items: center;
-  background-color: #fff4d5;
-  padding: 1rem;
 }
 
 .national-education-image>img{
     width: 100%;
     height: 100%;
+}
+
+.rallives-foundation-tab-box>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.quotes-container{
+    display: flex;
+    align-items: center;
+}
+
+.changemaker-certificate-container{
+    width: 100vw;
+    background-color: #FFE9C9;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.changemaker-certificate{
+    padding: 0rem 11rem;
+    height: 100%;
+}
+
+.changemaker-certificate>img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.changemaker-text-font{
+    font-weight: 600;
+    font-size: 28px;
+    color: #111111;
+    text-align: center;
 }
 
 
@@ -486,11 +538,7 @@
             padding: 1rem 1rem;
         }
     
-        .inner-content-tab {
-         
-            padding: 5rem 6rem;
-            grid-template-rows: 30% auto 1fr;
-        }
+       
     
         .container-card-colume {
             padding: 0rem 1rem;
@@ -576,11 +624,6 @@
             padding: 1rem 1rem;
         }
     
-        .inner-content-tab {
-            width: 82%;
-            padding: 5rem 3rem;
-            grid-template-rows: 25% auto 1fr;
-        }
     
         .container-card-colume {
             padding: 0rem 1rem;
@@ -670,11 +713,6 @@
         padding: 1rem 1rem;
     }
 
-    .inner-content-tab {
-     width: 82%;
-    padding: 5rem 3rem;
-    grid-template-rows: 25% auto 1fr;
-    }
 
     .container-card-colume {
    padding: 0rem 1rem;
@@ -774,12 +812,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 3rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
+      
     
         .container-card-colume {
             grid-template-columns: repeat(2, 1fr);
@@ -795,10 +828,7 @@
         .student-impact-container {
             height: 560px;
         }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
-        }
+
     
         .sdg-image-left-bottom-container {
             gap: 2rem;
@@ -944,12 +974,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 3rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
+     
     
         .container-card-colume {
             grid-template-columns: repeat(2, 1fr);
@@ -966,9 +991,6 @@
             height: 560px;
         }
     
-        .inner-data-impact {
-            grid-template-rows: 1fr;
-        }
     
         .sdg-image-left-bottom-container {
             gap: 2rem;
@@ -1116,13 +1138,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 3rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
-    
+       
         .container-card-colume {
             grid-template-columns: repeat(2,1fr);
             padding: 0rem 0rem;
@@ -1136,10 +1152,6 @@
     
         .student-impact-container {
             height: 560px;
-        }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
         }
     
         .sdg-image-left-bottom-container {
@@ -1285,12 +1297,6 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 3rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
     
         .container-card-colume {
             grid-template-columns: 1fr;
@@ -1305,10 +1311,6 @@
     
         .student-impact-container {
             height: 1100px;
-        }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
         }
     
         .sdg-image-left-bottom-container {
@@ -1455,13 +1457,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 3rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
-    
+        
         .container-card-colume {
             grid-template-columns: 1fr;
             padding: 0rem 0rem;
@@ -1476,11 +1472,7 @@
         .student-impact-container {
             height: 1100px;
         }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
-        }
-    
+
         .sdg-image-left-bottom-container {
             gap: 2rem;
         }
@@ -1626,12 +1618,6 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 1rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
     
         .container-card-colume {
             grid-template-columns: 1fr;
@@ -1647,10 +1633,7 @@
         .student-impact-container {
             height: 1100px;
         }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
-        }
+
     
         .sdg-image-left-bottom-container {
             gap: 2rem;
@@ -1793,13 +1776,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 1rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
-    
+       
         .container-card-colume {
             grid-template-columns: 1fr;
             padding: 0rem 0rem;
@@ -1813,10 +1790,6 @@
     
         .student-impact-container {
             height: 1100px;
-        }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
         }
     
         .sdg-image-left-bottom-container {
@@ -1960,12 +1933,6 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 1rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
     
         .container-card-colume {
             grid-template-columns: 1fr;
@@ -1980,10 +1947,6 @@
     
         .student-impact-container {
             height: 1100px;
-        }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
         }
     
         .sdg-image-left-bottom-container {
@@ -2128,12 +2091,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 1rem;
-            gap: 1rem;
-            grid-template-rows: 27% auto 1fr;
-        }
+    
     
         .container-card-colume {
             grid-template-columns: 1fr;
@@ -2149,10 +2107,7 @@
         .student-impact-container {
             height: 1100px;
         }
-    
-        .inner-data-impact {
-            grid-template-rows: 1fr;
-        }
+
     
         .sdg-image-left-bottom-container {
             gap: 2rem;
@@ -2294,12 +2249,7 @@
             padding: 1rem 0rem;
         }
     
-        .inner-content-tab {
-            width: 100%;
-            padding: 3rem 1rem;
-            gap: 1rem;
-            grid-template-rows: 20% auto 1fr;
-        }
+       
     
         .container-card-colume {
             grid-template-columns: 1fr;
@@ -2316,9 +2266,7 @@
             height: 1100px;
         }
     
-        .inner-data-impact {
-            grid-template-rows: 1fr;
-        }
+        
     
         .sdg-image-left-bottom-container {
             gap: 2rem;
@@ -2461,12 +2409,7 @@
         padding: 1rem 0rem;
     }
 
-    .inner-content-tab {
-        width: 100%;
-        padding: 3rem 1rem;
-        gap: 1rem;
-        grid-template-rows: 20% auto 1fr;
-    }
+   
 
     .container-card-colume {
         grid-template-columns: 1fr;
@@ -2481,10 +2424,6 @@
 
     .student-impact-container {
         height: 1100px;
-    }
-
-    .inner-data-impact {
-        grid-template-rows: 1fr;
     }
 
     .sdg-image-left-bottom-container {
@@ -2626,12 +2565,7 @@
     padding: 1rem 0rem;
   }
 
-  .inner-content-tab{
-    width: 100%;
-    padding: 3rem 1rem;
-    gap: 1rem;
-   grid-template-rows: 20% auto 1fr;
-  }
+
 
   .container-card-colume{
     grid-template-columns: 1fr;
@@ -2648,9 +2582,7 @@
    height:1100px;
  }
 
-  .inner-data-impact {
-        grid-template-rows: 1fr;
-   }
+ 
 
   .sdg-image-left-bottom-container {
     gap: 2rem;
