--- a/css/style.css
+++ b/css/style.css
@@ -1558,7 +1558,15 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 1440px) {
-  
+  .none-property {
+    display: none;
+  }
+
+  .benifits-container-inner {
+    padding: 1rem 3rem;
+    position: relative;
+  }
+
   .card-info-container {
     gap: 2rem;
   }
@@ -1577,6 +1585,9 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 1368px) {
+  .none-property {
+    display: none;
+  }
 
   .inner-section-container {
     gap: 1rem;
@@ -1601,6 +1612,7 @@ body::-webkit-scrollbar {
 
   .benifits-container-inner {
     padding: 1rem 3rem;
+    position: relative;
   }
 
   .image-cover-class {
@@ -1635,6 +1647,9 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 1280px) {
+  .none-property {
+    display: none;
+  }
 
   .inner-section-container {
     gap: 1rem;
@@ -1658,7 +1673,8 @@ body::-webkit-scrollbar {
   }
 
   .benifits-container-inner {
-    padding: 1rem 3rem;
+    padding: 1rem 1rem;
+    position: relative;
   }
 
   .image-cover-class {
@@ -1717,6 +1733,9 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 1180px) {
+  .none-property {
+    display: none;
+  }
 
   .inner-section-container {
     gap: 1rem;
@@ -1740,7 +1759,8 @@ body::-webkit-scrollbar {
   }
 
   .benifits-container-inner {
-    padding: 1rem 3rem;
+    padding: 1rem 1rem;
+    position: relative;
   }
 
   .image-cover-class {
@@ -1878,6 +1898,9 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 1024px) {
+  .none-property {
+    display: none;
+  }
 
   .hight-mobile-slider {
     height: 45vh;
@@ -1931,7 +1954,8 @@ body::-webkit-scrollbar {
   }
 
   .benifits-container-inner {
-    padding: 1rem 3rem;
+    padding: 1rem 1rem;
+    position: relative;
   }
 
   .image-cover-class {
@@ -1966,7 +1990,6 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 991px) {
-
   .hight-mobile-slider {
     height: 45vh;
   }
@@ -2310,7 +2333,6 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 800px) {
-
   .hight-mobile-slider {
     height: 45vh;
   }
